# Agently-Stage

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: build_test.yaml
agently_stage/: EventEmitter.py  Events.py  Stage.py  StageDispatch.py  StageEventLoopThread.py  StageException.py  StageFunction.py  StageHybridGenerator.py  StageListener.py  StageResponse.py  TaskThreadPool.py  Tunnel.py  __init__.py
examples/: agently_stage  readme_examples.ipynb
tests/test_api/: test_EventEmitter.py  test_Listener.py  test_Stage_with.py  test_Tunnel.py  test_with.py
tests/test_hybrid/: test_Stage_EventEmitter.py
