[project]
name = "agently-stage"
version = "0.2.0-preview-20250204"
description = "Agently Stage - Efficient Convenient Asynchronous and Multithreaded Programming"
authors = [
    { name = "Agently Team", email = "developer@agently.tech" },
    { name = "Maplemx", email = "maplemx@gmail.com" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]
keywords = ["agently", "async", "multithreading", "EventEmitter"]

[project.urls]
Homepage = "https://agently.tech"
Documentation = "https://github.com/AgentEra/Agently-Stage/blob/main/README.md"
Repository = "https://github.com/AgentEra/Agently-Stage"
Issues = "https://github.com/AgentEra/Agently-Stage/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
